--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,11 @@
         <h2 class="title">
           This page contains the demo of the four CRUD operations executed
           against a Full Stack Web App
+          <a href="./random.ejs">link to random website</a>
         </h2>
+
+
+
         <p>The application was created using the following technologies</p>
         <ul class="list-group">
           <li class="list-group-item">Front End -- HTML, CSS, Vanilla JS</li>
