--- a/views/readData.ejs
+++ b/views/readData.ejs
@@ -21,6 +21,7 @@
         <h2>
           This page contains the demo of the four CRUD operations executed
           against a Full Stack Web App
+          <a href="./random.ejs">link to random website</a>
         </h2>
         <p>The application was created using the following technologies</p>
         <ul>
